Fixed offcentered pictures.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@ header {
 
 ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .dog-img {
